# emch

./: .gitignore  .gitmodules  Cargo.toml  GUIDE.md  README.md  package.json  pnpm-lock.yaml  requirements.pip.txt
docs/: benchmark-v3.html  benchmark.html
misc/: DEV.md
scripts/: dev.js  download_transformer_and_convert.py  download_transformer_in_pytorch_and_onnx.py
scripts/rust/: build.sh  dev.sh  link.sh  prepare.sh
scripts/utils/: download_transformer_and_convert.py
scripts/web/: copy_onnx.sh  dev.js  link.sh  typecheck.sh
src/python/: ort.py  ort_q.py  pipelines.py  pytorch.py
src/python/utils/: get_data_for_inference_semantic_search_on_scifact.py
src/rust/: ort.rs  ort_q.rs  pipelines.rs
src/web/public/: index.html
src/web/public/favicons/: about.txt
src/web/scripts/: dev.sh
tests/scifact/data/: inference_semantic_search_on_scifact.json
