[package]
name = "emchat"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ort"
path = "src/rust/ort.rs"

[[bin]]
name = "ort_q"
path = "src/rust/ort_q.rs"

[dependencies]
serde = { version = "1.0.175", features = ["derive"] }
serde_json = { version = "1.0.103" }
tokenizers = { version = "0.13.3" }
ndarray = { version = "0.15.6" }
# kdam = { version = "0.4.0" }
# tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread"] }
# tracing = { version = "0.1.37" }
# tracing-subscriber = { version = "0.3.17" }
# postcard = { version = "1.0.6" }
# anyhow = { version = "1.0.72" }
# rust-bert = { version = "0.21.0" }
# tch = { version = "0.13.0" }
# qdrant-client = { version = "1.3.0" }

[dependencies.ort]
version = "1.15.2"
# default-features = false
features = [
  "load-dynamic",
  "minimal-build"
]

# [profile.release]
# debug = true
